# mentor

./: .dockerignore  .env.example  .gitattributes  .gitignore  ALGORITHM.md  Caddyfile  DEPLOY.md  Dockerfile  HANDOVER_PREDICTION_V2.md  ORACLE_DEPLOY.md  PHASES.md  README.md  docker-compose.caddy.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260625_0001_initial_schema.py  20260625_0002_curriculum_progress.py  20260625_0003_news_and_predictions.py  20260625_0004_alerts.py  20260625_0005_economic_events.py  20260628_0006_daily_news_tone.py  20260702_0007_stock_tips.py  20260704_0008_macro_series.py  20260716_0009_users.py  20260723_0010_prediction_origin.py
backend/models/: auto_eurusd_1h_20260628_061122.joblib  auto_eurusd_1h_20260628_061122.json  champion.json  daily_news_v1.joblib  daily_news_v1.json  hgb_1h_v1.joblib  hgb_1h_v1.json
backend/scripts/: entrypoint.sh
backend/src/mentor/: __init__.py  config.py  logging.py  main.py
backend/src/mentor/api/: deps.py  errors.py
backend/src/mentor/cli/: hash_password.py  ingest.py
backend/src/mentor/domain/: __init__.py  errors.py  indicators.py  instruments.py  money.py
backend/src/mentor/infrastructure/: db.py  models.py
backend/tests/: conftest.py  test_config_security.py
backend/tests/api/: test_risk_endpoints.py
backend/tests/application/: test_auth.py  test_auth_privileges.py  test_batch1_fixes.py  test_batch2_promotion.py  test_d1_lane.py  test_digest.py  test_drift.py  test_loop_observability.py  test_promotion_breakeven_floor.py  test_promotion_fairness.py  test_quality_unsettled.py  test_resolver.py  test_scheduler_jobs.py  test_trade_lifecycle.py
backend/tests/domain/: test_analytics.py  test_checklist.py  test_curriculum.py  test_expectancy.py  test_explainer.py  test_guardrails.py  test_market.py  test_money.py  test_position_sizing.py  test_trade.py
backend/tests/domain/backtest/: test_engine.py  test_indicators.py  test_market_view.py  test_strategy_smoke.py  test_walk_forward.py
backend/tests/domain/forecasting/: test_baseline.py  test_calibration.py  test_features.py  test_forecast_value.py  test_htf_features.py  test_macro_features.py  test_news_classifier_stub.py  test_news_features.py  test_regime.py  test_selective.py  test_vol_audit.py  test_vol_features.py  test_volatility.py
backend/tests/domain/journal/: test_checklist_guardrails.py  test_mistakes.py
backend/tests/domain/risk/: test_monte_carlo.py  test_sizing_guards.py  test_target_realism.py  test_trade_management.py
backend/tests/domain/stats/: test_breakeven.py  test_significance.py
backend/tests/infrastructure/: test_fred_fallback.py  test_model_store_list.py  test_prediction_origin.py
(+254 files in other folders)
